<resources>
    <string name="app_name">Newsly</string>
    <string name="settings_menu_item">Settings</string>
    <string name="no_news">No News</string>
    <string name="no_internet_connection">No Interent Connection</string>
    <string name="no_news_found">No News Found</string>


    <string name="settings_title">Settings</string>
    <string name="settings_news_source">Source</string>
    <string name="settings_news_sortby">SortBy</string>
    <string name="news_source_key" translatable="false">news_source</string>
    <string name="news_sortby_key" translatable="false">news_sortby</string>
    <string name="news_source_default" translatable="false">Techcrunch</string>
    <string name="news_sortby_default" translatable="false">Top</string>


</resources>
