<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/news_source_default"
        android:entries="@array/source_titles"
        android:entryValues="@array/source_values"
        android:key="@string/news_source_key"
        android:title="@string/settings_news_source" />
    <ListPreference
        android:defaultValue="@string/news_sortby_default"
        android:entries="@array/sortby_titles"
        android:entryValues="@array/sortby_values"
        android:key="@string/news_sortby_key"
        android:title="@string/settings_news_sortby" />
</PreferenceScreen>